--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 </head>
 <body>
     <header>
-        <h1><a href="http://localhost/">JavaScript</a></h1>
+        <h1><a href="http://localhost:8080/opentutorials_webapp/">JavaScript</a></h1>
     </header>
     <nav>
         <ol>
-        <li><a href="http://localhost/page_html.html">JavaScript란?</a></li>
-        <li><a href="http://localhost/page_vc.html">변수와 상수</a></li>
-        <li><a href="http://localhost/page_op.html">연산자</a></li>              
+        <li><a href="http://localhost:8080/opentutorials_webapp/page_html.html">JavaScript란?</a></li>
+        <li><a href="http://localhost:8080/opentutorials_webapp/page_vc.html">변수와 상수</a></li>
+        <li><a href="http://localhost:8080/opentutorials_webapp/page_op.html">연산자</a></li>              
         </ol>
     </nav>
 </body>
