--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-     <meta charset="utf-8">
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="http://localhost:8080/opentutorials_webapp/style.css">
 </head>
-<body>
+<body id="target">
     <header>
         <h1><a href="http://localhost:8080/opentutorials_webapp/">JavaScript</a></h1>
     </header>
@@ -14,5 +15,9 @@
         <li><a href="http://localhost:8080/opentutorials_webapp/page_op.html">연산자</a></li>              
         </ol>
     </nav>
+    <div id="control">
+        <input type="button" value="white" onclick="document.getElementById('target').className='white'" />
+        <input type="button" value="black" onclick="document.getElementById('target').className='black'" />
+    </div>
 </body>
 </html>
