--- a/page_op.html
+++ b/page_op.html
@@ -2,8 +2,9 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="http://localhost:8080/opentutorials_webapp/style.css">
 </head>
-<body>
+<body id="target">
   <header>
     <h1><a href="http://localhost:8080/opentutorials_webapp/">JavaScript</a></h1>
   </header>
@@ -14,6 +15,10 @@
       <li><a href="http://localhost:8080/opentutorials_webapp/page_op.html">연산자</a></li>
     </ol>
   </nav>
+    <div id="control">
+        <input type="button" value="white" onclick="document.getElementById('target').className='white'" />
+        <input type="button" value="black" onclick="document.getElementById('target').className='black'" />
+    </div>  
   <article>
     <h2>연산자</h2>
     계산을 할 때 사용되는 것입니다.
